style(carousel): fix control button positioning and add container margins
- Move carousel control buttons outside image area (-80px positioning)
- Add 100px left/right margins to carousel containers
- Use !important to override Bootstrap defaults
- Prevents button overlap with carousel images and adjacent text content

--- a/static/css/cosmetics-theme.css
+++ b/static/css/cosmetics-theme.css
@@ -317,6 +317,8 @@ h1, h2, h3, h4, h5, h6 {
 
 .carousel {
     margin-bottom: 3rem;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
 .carousel-inner {
@@ -341,11 +343,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .carousel-control-prev {
-    left: 2%;
+    left: -80px !important;
 }
 
 .carousel-control-next {
-    right: 52%;
+    right: -80px !important;
 }
 
 .carousel-control-prev-icon,
